--- a/csml_engine/Cargo.toml
+++ b/csml_engine/Cargo.toml
@@ -25,6 +25,9 @@ postgresql = ["diesel_postgresql"]
 sqlite = ["diesel_sqlite"]
 pooled = ["diesel/r2d2"]
 
+async = []
+postgresql-async = ["postgresql", "diesel-async/postgres", "diesel/chrono", "diesel/uuid", "diesel_migrations", "async"]
+
 diesel_postgresql = ["diesel/postgres", "diesel/chrono", "diesel/uuid", "diesel_migrations"] # "diesel/uuidv07",
 diesel_sqlite = ["diesel/sqlite", "diesel/chrono", "diesel_migrations"]
 
@@ -34,11 +37,15 @@ rustls = ["ring", "aes-gcm"]
 default = ["openssl"]
 
 [dependencies.diesel_migrations]
-version = "2.0.0"
+version = "2.1.0"
 optional = true
 
 [dependencies.diesel]
-version = "2.0.3"
+version = "2.1.0"
+optional = true
+
+[dependencies.diesel-async]
+version = "0.3.1"
 optional = true
 
 [dependencies.mongodb]
@@ -112,6 +119,9 @@ ureq = { version = "2.4.0", features = ["json"] }
 bincode = "1.3.3"
 log = "0.4.14"
 env_logger= "0.10.0"
+
+[dev-dependencies]
+tokio = { version = "1.28.2", features = ["macros"] }
 
 [[example]]
 name = "command_line"
