--- a/csml_engine/Cargo.toml
+++ b/csml_engine/Cargo.toml
@@ -25,7 +25,7 @@ postgresql = ["diesel_postgresql"]
 sqlite = ["diesel_sqlite"]
 pooled = ["diesel/r2d2"]
 
-async = []
+async = ["reqwest", "futures"]
 postgresql-async = ["postgresql", "diesel-async/postgres", "diesel/chrono", "diesel/uuid", "diesel_migrations", "async"]
 
 diesel_postgresql = ["diesel/postgres", "diesel/chrono", "diesel/uuid", "diesel_migrations"] # "diesel/uuidv07",
@@ -55,7 +55,7 @@ default-features = false
 features = ["sync"]
 
 [dependencies.futures]
-version = "0.3.15"
+version = "0.3.28"
 optional = true
 
 [dependencies.bson]
@@ -67,6 +67,11 @@ optional = true
 version = "0.9.0"
 default_features = false
 features = ["rustls"]
+optional = true
+
+[dependencies.reqwest]
+version = "0.11.18"
+features = ["json"]
 optional = true
 
 [dependencies.rusoto_core]
