--- a/csml_engine/Cargo.toml
+++ b/csml_engine/Cargo.toml
@@ -119,7 +119,7 @@ regex = "1.5.4"
 base64 = "0.21.1"
 hex = "0.4.3"
 tokio = "1.19.2"
-derive_builder = "0.12.0"
+typed-builder = "0.15.1"
 
 ureq = { version = "2.4.0", features = ["json"] }
 bincode = "1.3.3"
