--- a/csml_engine/Cargo.toml
+++ b/csml_engine/Cargo.toml
@@ -115,6 +115,7 @@ uuid = { version = "1.4.1", features = ["serde", "v4", "v7"] }
 serde = { version = "1.0.181", features = ["derive"] }
 serde_derive = "1.0.181"
 serde_json = "1.0.104"
+strum = { version = "0.25.0" , features = ["derive"]}
 regex = "1.8.1"
 base64 = "0.21.2"
 hex = "0.4.3"
